<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="news"
            type="com.example.dharmav10.domain.NewsProperty" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:context=".detail.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/content_image"
                android:scaleType="centerCrop"
                android:src="@color/design_default_color_primary"
                app:imageUrl="@{news.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_title"
                android:text="@{news.title}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thumnail"
                tools:text="@string/content_title" />

            <Button
                android:id="@+id/btn_read"
                style="@style/CategoryBotton"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_primary"
                android:text="Подробно"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_weight="9"
                android:contentDescription="@string/content_data"
                android:text="@{news.pubDate}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btn_read"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_read"
                tools:text="@string/content_data" />

            <TextView
                android:id="@+id/tv_sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Описание"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_read"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/content_description"
                android:lineSpacingMultiplier="1.5"
                android:text="@{news.description}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sinopsis"
                tools:text="@string/content_description" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Содержание"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"/>

            <TextView
                android:id="@+id/tv_body_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/content_description"
                android:lineSpacingMultiplier="1.5"
                android:text="@{news.content}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content"
                tools:text="@string/content_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>